shriya/stylesheet.css
/* ... */
@-webkit-keyframes bulb_glow_orange_after {
	0%{
		background-image: url('bulb.png');
	}
	50%{
		background-image: url('bulb_orange.png');
	}
	100%{
		background-image: url('bulb.png');
	}
}
@-moz-keyframes bulb_glow_orange_after {
	0%{
		background-image: url('bulb.png');
	}
	50%{
		background-image: url('bulb_orange.png');
	}
	100%{
		background-image: url('bulb.png');
	}
}
@-o-keyframes bulb_glow_orange_after {
	0%{
		background-image: url('bulb.png');
	}
	50%{
		background-image: url('bulb_orange.png');
	}
	100%{
		background-image: url('bulb.png');
	}
}
@-ms-keyframes bulb_glow_orange_after {
	0%{
		background-image: url('bulb.png');
	}
	50%{
		background-image: url('bulb_orange.png');
	}
	100%{
		background-image: url('bulb.png');
	}
}
@keyframes bulb_glow_orange_after {
	0%{
		background-image: url('bulb.png');
	}
	50%{
		background-image: url('bulb_orange.png');
	}
	100%{
		background-image: url('bulb.png');
	}
}
audio {
	display: none;
}

.banner {
	max-width: 100%;
	display: none;
	margin-top:50px;
}


.balloons {
	position: fixed;
	bottom: -200px;
	opacity: 0.6;
	z-index: 99;
	width: 100px;
	height: 183px;
	background-repeat: no-repeat no-repeat;
	background-size: 100px 183px;
}
.balloons h2 {
	text-transform: uppercase;
	font-family: 'Montserrat', sans-serif;
	font-size: 50px;
	color: #BF4136;
	text-shadow: 5px 5px 5px #FFF;
	display: none;
}
#b1,#b11 {
	background-image: url('b1.png');
}
#b2,#b22 {
	background-image: url('b2.png');
}
#b3,#b33 {
	background-image: url('b3.png');
}
#b4,#b44{
	background-image: url('b4.png');
}
#b5,#b55{
	background-image: url('b5.png');
}
#b6,#b66{
	background-image: url('b6.png');
}
#b7,#b77{
	background-image: url('b7.png');
}
.balloons-rotate-behaviour-one {
	-webkit-animation: balloons_rotate_one linear 10s infinite;
	-webkit-transform: rotate(30deg);
	-moz-animation: balloons_rotate_one linear 10s infinite;
	-moz-transform: rotate(30deg);
	-o-animation: balloons_rotate_one linear 10s infinite;
	-o-transform: rotate(30deg);
	-ms-animation: balloons_rotate_one linear 10s infinite;
	-ms-transform: rotate(30deg);
	animation: balloons_rotate_one linear 10s infinite;
	transform: rotate(30deg);
}
@-webkit-keyframes balloons_rotate_one {
	0% {
		-webkit-transform: rotate(30deg);
	}
	50% {
		-webkit-transform: rotate(-30deg);
	}
	100% {
		-webkit-transform: rotate(30deg);
	}
}
@-moz-keyframes balloons_rotate_one {
	0% {
		-moz-transform: rotate(30deg);
	}
	50% {
		-moz-transform: rotate(-30deg);
	}
	100% {
		-moz-transform: rotate(30deg);
	}
}
@-o-keyframes balloons_rotate_one {
	0% {
		-o-transform: rotate(30deg);
	}
	50% {
		-o-transform: rotate(-30deg);
	}
	100% {
		-o-transform: rotate(30deg);
	}
}
@-ms-keyframes balloons_rotate_one {
	0% {
		-ms-transform: rotate(30deg);
	}
	50% {
		-ms-transform: rotate(-30deg);
	}
	100% {
		-ms-transform: rotate(30deg);
	}
}
@keyframes balloons_rotate_one {
	0% {
		transform: rotate(30deg);
	}
	50% {
		transform: rotate(-30deg);
	}
	100% {
		transform: rotate(30deg);
	}
}
.balloons-rotate-behaviour-two {
	-webkit-animation: balloons_rotate_two linear 10s infinite;
	-webkit-transform: rotate(-20deg);
	-moz-animation: balloons_rotate_two linear 10s infinite;
	-moz-transform: rotate(-20deg);
	-o-animation: balloons_rotate_two linear 10s infinite;
	-o-transform: rotate(-20deg);
	-ms-animation: balloons_rotate_two linear 10s infinite;
	-ms-transform: rotate(-20deg);
	animation: balloons_rotate_two linear 10s infinite;
	transform: rotate(-20deg);
}
@-webkit-keyframes balloons_rotate_two {
	0% {
		-webkit-transform: rotate(-20deg);
	}
	50% {
		-webkit-transform: rotate(20deg);
	}
	100% {
		-webkit-transform: rotate(-20deg);
	}
}
@-moz-keyframes balloons_rotate_two {
	0% {
		-moz-transform: rotate(-20deg);
	}
	50% {
		-moz-transform: rotate(20deg);
	}
	100% {
		-moz-transform: rotate(-20deg);
	}
}
@-o-keyframes balloons_rotate_two {
	0% {
		-o-transform: rotate(-20deg);
	}
	50% {
		-o-transform: rotate(20deg);
	}
	100% {
		-o-transform: rotate(-20deg);
	}
}
@-ms-keyframes balloons_rotate_two {
	0% {
		-ms-transform: rotate(-20deg);
	}
	50% {
		-ms-transform: rotate(20deg);
	}
	100% {
		-ms-transform: rotate(-20deg);
	}
}
@keyframes balloons_rotate_two {
	0% {
		transform: rotate(-20deg);
	}
	50% {
		transform: rotate(20deg);
	}
	100% {
		transform: rotate(-20deg);
	}
}

.balloon-border{
	position: fixed;
	top:100%;
	opacity: 0.5;
	z-index: 9999;
}
.control-panel {
	position: fixed;
	bottom: 0;
	padding:10px 0px 10px 0px;
}
#play, #bannar_coming, #balloons_flying,#cake_fadein,#light_candle,#wish_message,#story {
	display: none;
}

.cake-cover {
	margin-top: 50px;
	margin-bottom: 200px;
}
.message {
	margin-top: 200px;
	display: none;
}
.message p {
	font-family: 'Montserrat', sans-serif;
	font-size: 30px;
	text-transform: uppercase;
	color: #C4515C;
	text-shadow: 2px 2px 2px #FFF;
	display: none;
	font-weight: bold;
}

.navbar {
	font-family: 'Montserrat', sans-serif;
}

.gallery-show-hide {
	display: none;
}

.gallery-container {
	overflow: hidden;
	background-attachment: fixed;
	display: flex;
	align-items: center;
}

.gallery-wrapper {
	position: relative;
	flex-grow: 1;
	margin: auto;
	max-width: 1200px;
	max-height: 1200px;
	
	display: grid;
	grid-template-columns: repeat(8, 1fr);
	grid-template-rows: repeat(4, 1fr);
	grid-gap: 2vmin;
	justify-items: center;
	align-items: center;
  }
  
  .gallery-wrapper IMG {
	z-index: 1;
	grid-column: span 2;
	max-width: 100%;
	margin-bottom: -52%;
	clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
	transform: scale(1);
	transition: all .25s;
  }

  .gallery-wrapper IMG:hover {
	z-index: 2;
	transform: scale(2);
  }

  .gallery-wrapper IMG:nth-child(7n + 1) {
	grid-column: 2 / span 2;
  }
  

.btn-primary {
        border-color: #466baf;
        padding: 10px;
        text-transform: uppercase;
        font-family: 'Montserrat', sans-serif;
        font-weight: 700;
        color: #fff;
        background-color: #466baf;
}
/* ... */

